# label-doconly-changes

./: .flake8  .gitignore  .pre-commit-config.yaml  NOTICE  README.md  action.yaml  pyproject.toml
.github/workflows/: pre-commit.yaml  tests.yaml
src/label_doconly_changes/: __main__.py  app.py  base_hooks.py
src/label_doconly_changes/hooks/: python.py  unconditional.py
src/label_doconly_changes/hooks/scripts/: python.py
tests/: utils.py
tests/data/hooks/python/: is_doc_only_false.py  is_doc_only_true.py
tests/hooks/: python_test.py
tests_hook_scripts/: conftest.py  python_test.py
