[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "label-doconly-changes"
dependencies = [
    "libcst",
    "pathspec",
    "requests",
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=7.1.2,<8",
]

[project.scripts]
label-doconly-changes = "label_doconly_changes.__main__:main"

[tool.setuptools_scm]
git_describe_command = "git describe --dirty --tags --long --exclude v[0-9]*"

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
atomic = true

[tool.ruff]
target-version = "py311"
select = ["E", "F", "I001", "PGH004"]
fix = true
fixable = ["I001"]
isort.combine-as-imports = true
isort.known-first-party = ["label_doconly_changes"]
force-exclude = true
extend-exclude = [
    "tests/data",
]

[tool.pytest.ini_options]
pythonpath = ["."]
